--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,11 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
+# AWS
+.aws/
