--- a/flask_dev/requirements.txt
+++ b/flask_dev/requirements.txt
@@ -26,7 +26,7 @@ Mako==1.2.0
 MarkupSafe==2.1.1
 packaging==21.3
 prompt-toolkit==3.0.29
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pyparsing==3.0.8
 python-dotenv==0.20.0
 pytz==2022.1
